# llmx

./: .gitignore  ENHANCEMENT_PLAN.md  EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  README.md  TEST_RESULTS.md  justfile  pyproject.toml  review_plan.py  test_api.py  test_cursor_routing.py  test_native_sdks.py
.claude/plans/: drop-litellm.md  review-gemini.md  review-gpt.md  skill-review-gemini.md  skill-review-gpt.md
.context/: Makefile
llmx/: __init__.py  api.py  auth.py  batch_cmd.py  cli.py  cli_backends.py  dispatch_plan.py  gemini_batch.py  helpers.py  image.py  info_cmd.py  inspect.py  logger.py  mode.py  providers.py  research.py  usage_log.py  usage_report.py  vision.py
llmx/lite/bare/.claude/: current-session-id
scripts/: usage_summary.py
tests/: test_auth.py  test_cli_fallback.py  test_dispatch_plan.py  test_mode.py  test_schema_normalize.py
