[project]
name = "llmx"
dynamic = ["version"]
description = "Unified CLI and API for LLM providers via native SDKs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.50.0",
    "click>=8.1.7",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "google-genai>=1.0.0",
    "pillow>=10.0.0",
]

[project.scripts]
llmx = "llmx.cli:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

[tool.pyright]
typeCheckingMode = "basic"
exclude = ["build/"]

[dependency-groups]
dev = []
